minor updates and documentation

--- a/CapsNet.ipynb
+++ b/CapsNet.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "tensor([0.2494, 0.4989, 0.7483], dtype=torch.float64)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,55 +56,23 @@
     "        \"\"\"\n",
     "        Initialize the layer.\n",
     "        Args:\n",
-    "            in_channels: \tNumber of input channels.\n",
-    "            out_channels: \tNumber of output channels.\n",
-    "            dim_caps:\t\tDimensionality, i.e. length, of the output capsule vector.\n",
+    "            in_channels: Number of input channels.\n",
+    "            out_channels: Number of output channels.\n",
+    "            dim_caps: Dimensionality, i.e. length, of the output capsule vector.\n",
     "\n",
     "        \n",
     "        \"\"\"\n",
     "        \n",
+    "        \n",
     "        super(PrimaryCapsules, self).__init__()\n",
-    "        self.dim_caps = dim_caps\n",
-    "        self._caps_channel = int(out_channels / dim_caps)\n",
+    "        self.dim_caps = dim_caps #dim_caps = 8\n",
+    "        self._caps_channel = int(out_channels / dim_caps) # 256/8 = 32\n",
     "        self.conv = nn.Conv2d(in_channels, out_channels, kernel_size=kernel_size, stride=stride, padding=padding)\n",
     "\n",
     "    def forward(self, x):\n",
     "        out = self.conv(x)\n",
-    "        out = out.view(out.size(0), self._caps_channel, out.size(2), out.size(3), self.dim_caps)\n",
-    "        out = out.view(out.size(0), -1, self.dim_caps)\n",
-    "        return squash(out)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class PrimaryCapsules(nn.Module):\n",
-    "    def __init__(self, in_channels, out_channels, dim_caps,kernel_size=9, stride=2, padding=0):\n",
-    "        \n",
-    "        \"\"\"\n",
-    "        Initialize the layer.\n",
-    "        Args:\n",
-    "            in_channels: \tNumber of input channels.\n",
-    "            out_channels: \tNumber of output channels.\n",
-    "            dim_caps:\t\tDimensionality, i.e. length, of the output capsule vector.\n",
-    "\n",
-    "        \n",
-    "        \"\"\"\n",
-    "        \n",
-    "        super(PrimaryCapsules, self).__init__()\n",
-    "        self.dim_caps = dim_caps\n",
-    "        self._caps_channel = int(out_channels / dim_caps)\n",
-    "        self.conv = nn.Conv2d(in_channels, out_channels, kernel_size=kernel_size, stride=stride, padding=padding)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        out = self.conv(x)\n",
-    "        out = out.view(out.size(0), self._caps_channel, out.size(2), out.size(3), self.dim_caps)\n",
-    "        out = out.view(out.size(0), -1, self.dim_caps)\n",
+    "        out = out.view(out.size(0), self._caps_channel, out.size(2), out.size(3), self.dim_caps)#32X6X6X8\n",
+    "        out = out.view(out.size(0), -1, self.dim_caps)#[32X6X6,8]\n",
     "        return squash(out)\n",
     "\n",
     "\n"
@@ -131,16 +99,18 @@
     "        \"\"\"\n",
     "    \n",
     "        super(RoutingCapsules, self).__init__()\n",
-    "        self.in_dim = in_dim\n",
-    "        self.in_caps = in_caps\n",
-    "        self.num_caps = num_caps\n",
-    "        self.dim_caps = dim_caps\n",
-    "        self.num_routing = num_routing\n",
+    "        self.in_dim = in_dim # 8\n",
+    "        self.in_caps = in_caps #32\n",
+    "        self.num_caps = num_caps #10\n",
+    "        self.dim_caps = dim_caps #16\n",
+    "        self.num_routing = num_routing #3\n",
     "        self.device = device\n",
     "\n",
-    "        self.W = nn.Parameter( 0.01 * torch.randn(1, num_caps, in_caps, dim_caps, in_dim ) )\n",
+    "        self.W = nn.Parameter( 0.01 * torch.randn(1, num_caps, in_caps, dim_caps, in_dim ) ) # W matrix to link primary layer to digit layer\n",
     "\n",
     "    def __repr__(self):\n",
+    "        \"\"\" for representation purposes \"\"\"\n",
+    "        \n",
     "        tab = '  '\n",
     "        line = '\\n'\n",
     "        next = ' -> '\n",
